<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">报账叫号</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="querying">请稍等...</string>
    <string name="yes">确定</string>
    <string name="network_error">网络异常，请检查网络设置</string>
    <string name="login_name">工号</string>
    <string name="login_passw">密码</string>
    <string name="login_error">对不起，用户名或密码错误，请重新登录！</string>
    <string name="set_cancel_success">注销成功</string>
    <string name="set_function">报账叫号</string>
    <string name="set_banben">版本号：1.0.1</string>
    <string name="set_name">李进耀、姚义祥、严鸣、王蕾</string>
    <string name="login_success">登陆成功</string>
    <string name="input_user">请输入账号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="login_code">验证码</string>
    <string name="code_tip1">请输入验证码</string>
    <string name="login_system_error">系统繁忙，请重试！</string>

</resources>