<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/topbar" >

        <Button
            android:id="@+id/backmain"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/topbar_btn_back_pressed_effect"
            android:paddingLeft="10dp"
            android:text="返回"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/titlemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/cw_userid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@color/transprent"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/login_name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:numeric="integer"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <EditText
            android:id="@+id/cw_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/transprent"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/login_passw"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        ></LinearLayout>
    
    <Button
        android:id="@+id/cw_login"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_login_pressed_effect"
        android:scaleType="fitXY"
        android:src="@drawable/btn_login_bg"
        android:text="登 录"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>